# personal_projects

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .terraform-docs.yml  AZURE_SETUP_GUIDE.md  Book(Sheet1).csv  CHANGES.md  CLEANUP_SUMMARY.md  CORRECTIONS_APPLIED.md  DYNATRACE_IMPLEMENTATION_SUMMARY.md  MAINTAINABILITY_REPORT.md  README.md  SUMMARY.md  backup.tf  data.tf  dev-requirements.txt  disk.tf  host.json  local.settings.example.json  local.settings.json  locals.tf  logs.md  main.tf  mypy.ini  network.tf  output.tf  outputs.tf  pyproject.toml  replicate_servicebus_a_to_b.py  requirements.txt  servicebus_messsage_replication.md  test_replication_simple.py  variables.tf  versions.tf  vm.tf  vmss.tf
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pre-commit-install.txt  release.yaml
.github/workflows/: .gitignore  CONSOLE-OUTPUT-GUIDE.md  MIGRATION-CUTOVER-README.md  README.md  ansible-azure-backup-protection.yaml  ansible-configure-dynatrace.yaml  ansible-delete-migrated-vms.yaml  ansible-disjoin-windows-domain.yaml  ansible-domain-rejoin-windows.yaml  ansible-domain-rejoin-windows.yaml.bak  ansible-domain-windows.yaml  ansible-enable-dynatrace-for-sql.yaml  ansible-enable-dynatrace.yaml  ansible-enable-update-manager.yaml  ansible-generate-terraform.yaml  ansible-join-windows-domain.yaml  ansible-list-migrate-projects.yaml  ansible-migration-cutover.yaml  ansible-replication-to-sqldb.yml  ansible-replication-to-sqlmi.yml  ansible-start-migration-replication.yaml  ansible-start-test-migration-cleanup.yaml  ansible-start-test-migration.yaml  ansible-stop-migration-replication.yaml  bump-version.yaml  ci.yml  create-release.yaml  local.settings.json  on-pull-request.yaml  replicate-servicebus-a-to-b.yaml  requirements.txt  test-replication-simple.yaml  uninstall-onprem-tools.yml
ansible/: .ansible-lint  README.md  REUSABLE_TASKS.md  ansible.cfg  requirements.yml
ansible/filter_plugins/: vm_name_filters.py
ansible/logs/: README.md
ansible/playbooks/: README.md  azure-backup-protection.yml  configure-dynatrace-linux.yml  configure-dynatrace-windows.yml  delete-migrated-vms.yml  disjoin-windows-domain.yaml  domain-rejoin-windows.yaml  domain-windows.yaml  enable-dynatrace-for-vm.yml  enable-dynatrace-sql.yml  enable-patching-post-migration.yml  enable-update-manager.yml  generate-terraform.yml  join-windows-domain.yaml  list-migrate-projects.yml  migration-cutover.yml  start-migration-replication.yml  start-test-migration-cleanup.yml  start-test-migration.yml  (+4 more)
dev/terraform/: vm.tf  (+29 more)
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  MIGRATION.md  TROUBLESHOOTING.md  UNINSTALL_ONPREM_REVIEW.md  WINDOWS_UPDATE_MANAGER.md  patching.md
examples/: example.tf
patching_schedules/: README.md  power-bi-dev.json  rightfax-dev.json  test_vm_migration_schedules.json  testing_vm_patching_schedules.json
phase_2/: manifest.yml
power_bi_dev/: manifest.yml
power_bi_prod/: manifest.yml
src/: __init__.py  config.py  constants.py  error_handlers.py  exceptions.py  function.json  host.json  local.settings.json  logging_utils.py  main.py  message_utils.py  requirements.txt  retry_utils.py  test_main.py
terraform/: COMPLETE_GUIDE.md  SECRET_DETECTION_FIX.md  SETUP_COMPLETE.md  fix-secret-detection.ps1
tests/: README.md  __init__.py  constants_test.py  error_handlers_test.py  exceptions_test.py  main_test.py  message_utils_test.py  retry_utils_test.py  test_constants.py  test_main.py
(+256 files in other folders)
